--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID" version="2.5">
+<web-app 
+    xmlns="http://java.sun.com/xml/ns/javaee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+    version="3.0">
 
 	<display-name>Cinema</display-name>
 	
@@ -43,13 +44,13 @@
 	
 
 	<servlet>
-		<servlet-name>servlet</servlet-name>
-		<servlet-class>servlet.Myservlet</servlet-class>
+		<servlet-name>Controller</servlet-name>
+		<servlet-class>ua.lviv.elearn.odoskaliuk.cinema.web.Controller</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>servlet</servlet-name>
-		<url-pattern>/servlet</url-pattern>
+		<servlet-name>Controller</servlet-name>
+		<url-pattern>/controller</url-pattern>
 	</servlet-mapping>
 
 </web-app>
